test/test_examples/syntactic_examples/syntax_error/error_statement_32.zig
// Syntax error: incorrect number of brackets in expression

const ifj = @import("ifj24.zig"); 

pub fn main() void {
   var y = 4782;
   const x  = (((foo(10, 8.48) + y ) * 5);
}